contact SCSS and Z-Index corrected.

--- a/src/components/Nav/SideNavBar.scss
+++ b/src/components/Nav/SideNavBar.scss
@@ -6,7 +6,7 @@ nav {
   transform: rotate(-90deg) translate3d(-50%,0,0);
   top: 5%;
   left: -12rem;
-  z-index: 2;
+  z-index: 5;
 
   a {
     margin-right: 2vw;
