--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -18,6 +18,7 @@
 }
 
 .vertAlign {
+  gap: 1vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -31,15 +32,17 @@
 }
 
 ._form_wrapper {
-  width: 30%;
   display: flex;
+  align-items: center;
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.51);
-  background-color: rgba(246, 223, 89, 0.3);
-  z-index: 1;
+  background-color: rgb(246, 239, 197);
+  z-index: 2;
+  position: static;
+  width: 30%;
   max-width: 100%;
-  height: 25vh;
+  height: 20vh;
   padding: 2em;
 }
 
@@ -72,17 +75,30 @@
   }
 }
 @media (max-width: 768px) {
+  .vertAlign {
+    gap: 0px;
+    justify-content: center
+  }
+
+  .submit-btn {
+    // position: absolute;
+    // bottom: 0;
+  }
+  
   .contact {
     width: 50%;
     flex-direction: column;
   }
   ._form_wrapper {
-    width: 100%;
+    width: 70%;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 2rem;
     padding: 2em;
     padding-bottom: 4em;
+    height: 35vh;
+    align-items: flex-start;
+
 
     button {
       margin-top: 5px;
@@ -108,11 +124,12 @@
 }
 
 .botCircle{
-
   border-radius: 50%;
   background: rgb(255, 255, 255);
   animation: ripple 8s infinite;
   box-shadow: 0px 0px 2px 0px #508fb9;
+  position: static;
+  z-index: 1;
 }
 
 .botSmall {
@@ -128,6 +145,7 @@
 .botSmall2 {
   shape-outside: circle(50%) margin-box;
   position: absolute;
+
   bottom: 25vh;
   right: -5vw;
   height: 25em;
@@ -144,6 +162,23 @@
   .botSmall2 {
     top: -5vh;
     right: -10vw;
+  }
+}
+
+@media (max-width: 800px) {
+  .botSmall, .botSmall2 {
+    height: 15em;
+    width: 15em;
+  }
+
+  .botSmall {
+    bottom: -15vh;
+    left: -15vw;
+  }
+
+  .botSmall2 {
+    top: -15vh;
+    right: -15vw;
   }
 }
 
